# flask-api-investment-simulator

./: LICENSE  README.md  main.py  pyproject.toml
routes/: home.py  simulate.py
templates/: index.html  result.html
